Finished first phase of directory navigation.

--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,8 @@
     </div>
     <div id="main">
         <div id="main-header">
-            <div id="navigate"></div>
-            <div id="search-button"></div>
+            <div id="navigate">&nbsp;</div>
+            <div class="icon" id="search-button">search</div>
             <div id="search-input"></div>
         </div>
         <div id="main-content">
