Refactored rjs code into modules.

--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,8 @@
         <div id="main-content">
         </div>
     </div>
+    <script src="../rjs/dependencies.js"></script>
     <script src="../rjs/forms.js"></script>
+    <script src="../rjs/navigate.js"></script>
 </body>
 </html>
