See previous commit.

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,9 @@
         <div id="main-content">
         </div>
     </div>
+    <script src="../rjs/ipcr.js"></script>
     <script src="../rjs/dependencies.js"></script>
+    <script src="../rjs/filter.js"></script>
     <script src="../rjs/forms.js"></script>
     <script src="../rjs/navigate.js"></script>
 </body>
