Styled toolbar option buttons.

--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,12 @@
 <body>
     <div id="titlebar"></div>
     <div id="sidebar">
-        <button class="icon sidebar-button" id="filter">filter_list</button>
-        <button class="icon sidebar-button" id="edit-contract">edit</button>
-        <button class="icon sidebar-button" id="generate-contract">build</button>
+        <div id="option-selector"></div>
+        <div id="sidebar-options">
+            <button class="icon sidebar-button option-selected" id="filter">filter_list</button>
+            <button class="icon sidebar-button" id="edit-contract">edit</button>
+            <button class="icon sidebar-button" id="generate-contract">build</button>
+        </div>
     </div>
     <div id="main">
         <div id="main-header">
@@ -26,6 +29,7 @@
     </div>
     <script src="../rjs/ipcr.js"></script>
     <script src="../rjs/dependencies.js"></script>
+    <script src="../rjs/animation.js"></script>
     <script src="../rjs/filter.js"></script>
     <script src="../rjs/forms.js"></script>
     <script src="../rjs/navigate.js"></script>
