Fixed navigation and toolbar options.

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <div id="sidebar">
         <div id="option-selector"></div>
         <div id="sidebar-options">
-            <button class="icon sidebar-button option-selected" id="filter">filter_list</button>
+            <button class="icon sidebar-button" id="filter">filter_list</button>
             <button class="icon sidebar-button" id="edit-contract">edit</button>
             <button class="icon sidebar-button" id="generate-contract">build</button>
         </div>
@@ -29,9 +29,9 @@
     </div>
     <script src="../rjs/ipcr.js"></script>
     <script src="../rjs/dependencies.js"></script>
+    <script src="../rjs/navigate.js"></script>
     <script src="../rjs/animation.js"></script>
     <script src="../rjs/filter.js"></script>
     <script src="../rjs/forms.js"></script>
-    <script src="../rjs/navigate.js"></script>
 </body>
 </html>
