Added adding functionality and message prompts. Fixed numpy matrix string truncation.

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/toolbar.css">
     <link rel="stylesheet" href="../css/material-font.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/prompt.css">
 </head>
 <body>
     <div id="titlebar"></div>
@@ -27,6 +28,7 @@
         <div id="main-content">
         </div>
     </div>
+    <div id="message-prompt"></div>
     <script src="../rjs/ipcr.js"></script>
     <script src="../rjs/dependencies.js"></script>
     <script src="../rjs/navigate.js"></script>
