Fixed bugs and implemented edit/delete features.

--- a/html/index.html
+++ b/html/index.html
@@ -28,12 +28,16 @@
         <div id="main-content">
         </div>
     </div>
+    <div id="mutate-prompt">
+        <button id="edit-button" class="mutate-prompt-button">EDIT</button>
+        <button id="delete-button" class="mutate-prompt-button">DELETE</button>
+    </div>
     <div id="message-prompt"></div>
     <script src="../rjs/ipcr.js"></script>
     <script src="../rjs/dependencies.js"></script>
     <script src="../rjs/navigate.js"></script>
     <script src="../rjs/animation.js"></script>
-    <script src="../rjs/filter.js"></script>
     <script src="../rjs/forms.js"></script>
+    <script src="../rjs/filter.js"></script>
 </body>
 </html>
