--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,22 @@
     <link rel="stylesheet" href="../css/material-font.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/prompt.css">
+    <link rel="stylesheet" href="../css/settings.css">
+    <link rel="stylesheet" href="../css/search.css">
 </head>
 <body>
     <div id="overlay">
         <img id="logo" src="../assets/images/logos-sec.png">
+    </div>
+    <div id="search-prompt">
+        <div id="search-input-wrapper">
+            <label id="search-label" for="search-input">SEARCH</label>
+            <input id="search-input" type="text">
+        </div>
+        <div id="search-by">
+            <div id="current-search-by"></div>
+            <div id="search-by-options-wrapper"></div>
+        </div>
     </div>
     <div id="titlebar"></div>
     <div id="sidebar-spacer">&nbsp;</div>
@@ -23,6 +35,20 @@
                 <button class="icon sidebar-button" id="edit-contract">edit</button>
                 <button class="icon sidebar-button" id="generate-contract">build</button>
             </div>
+            <div id="settings-wrapper">
+                <h1 class="settings-section-title">
+                    Network
+                </h1>
+                <div class="settings-row">
+                    <label class="settings-label" for="ip-input">IP</label>
+                    <input data-type="string" data-pattern="^(\d{1,3}\.){3}\d{1,3}$" class="settings-input" id="ip-input" type="text">
+                </div>
+                <div class="settings-row">
+                    <label class="settings-label" for="port-input">PORT</label>
+                    <input data-type="int" data-pattern="^\d{1,5}$" class="settings-input" id="port-input" type="text">
+                </div>
+                <button id="save-settings">SALVAR</button>
+            </div>
             <button class="icon sidebar-button" id="settings">settings</button>
         </div>
     </div>
@@ -30,7 +56,6 @@
         <div id="main-header">
             <div id="navigate">&nbsp;</div>
             <div class="icon" id="search-button">search</div>
-            <div id="search-input"></div>
         </div>
         <div id="main-content">
         </div>
@@ -48,5 +73,6 @@
     <script src="../rjs/filter.js"></script>
     <script src="../rjs/settings.js"></script>
     <script src="../rjs/splash.js"></script>
+    <script src="../rjs/search.js"></script>
 </body>
 </html>
