--- a/GUI/html/index.html
+++ b/GUI/html/index.html
@@ -65,6 +65,14 @@
         <button id="delete-button" class="mutate-prompt-button">DELETE</button>
     </div>
     <div id="message-prompt"></div>
-    <script src="../rjs/index.js"></script>
+    <script src="../rjs/ipcr.js"></script>
+    <script src="../rjs/dependencies.js"></script>
+    <script src="../rjs/navigate.js"></script>
+    <script src="../rjs/animation.js"></script>
+    <script src="../rjs/forms.js"></script>
+    <script src="../rjs/filter.js"></script>
+    <script src="../rjs/settings.js"></script>
+    <script src="../rjs/splash.js"></script>
+    <script src="../rjs/search.js"></script>
 </body>
 </html>
