--- a/GUI/html/index.html
+++ b/GUI/html/index.html
@@ -6,15 +6,13 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/toolbar.css">
     <link rel="stylesheet" href="../css/material-font.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/prompt.css">
+    <link rel="stylesheet" href="../css/data-table.css">
+    <link rel="stylesheet" href="../css/navigator.css">
+    <link rel="stylesheet" href="../css/form.css">
     <link rel="stylesheet" href="../css/settings.css">
     <link rel="stylesheet" href="../css/search.css">
 </head>
 <body>
-    <div id="overlay">
-        <img id="logo" src="../assets/images/logos-sec.png">
-    </div>
     <div id="search-prompt">
         <div id="search-input-wrapper">
             <label id="search-label" for="search-input">SEARCH</label>
@@ -28,51 +26,18 @@
     <div id="titlebar"></div>
     <div id="sidebar-spacer">&nbsp;</div>
     <div id="sidebar">
-        <div id="option-selector"></div>
         <div id="sidebar-options">
             <div id="upper">
-                <button class="icon sidebar-button" id="filter">filter_list</button>
-                <button class="icon sidebar-button" id="edit-contract">edit</button>
-                <button class="icon sidebar-button" id="generate-contract">build</button>
+                <button class="icon view-button" id="show-table-view">filter_list</button>
+                <button class="icon view-button" id="show-edit-view">edit</button>
+                <button class="icon view-button" id="show-build-view">build</button>
             </div>
-            <div id="settings-wrapper">
-                <h1 class="settings-section-title">
-                    Network
-                </h1>
-                <div class="settings-row">
-                    <label class="settings-label" for="ip-input">IP</label>
-                    <input data-type="string" data-pattern="^(\d{1,3}\.){3}\d{1,3}$" class="settings-input" id="ip-input" type="text">
-                </div>
-                <div class="settings-row">
-                    <label class="settings-label" for="port-input">PORT</label>
-                    <input data-type="int" data-pattern="^\d{1,5}$" class="settings-input" id="port-input" type="text">
-                </div>
-                <button id="save-settings">SALVAR</button>
-            </div>
-            <button class="icon sidebar-button" id="settings">settings</button>
+            <div id="settings-wrapper"></div>
+            <button class="icon view-button" id="settings">settings</button>
         </div>
     </div>
-    <div id="main">
-        <div id="main-header">
-            <div id="navigate">&nbsp;</div>
-            <div class="icon" id="search-button">search</div>
-        </div>
-        <div id="main-content">
-        </div>
-    </div>
-    <div id="mutate-prompt">
-        <button id="edit-button" class="mutate-prompt-button">EDIT</button>
-        <button id="delete-button" class="mutate-prompt-button">DELETE</button>
-    </div>
-    <div id="message-prompt"></div>
-    <script src="../rjs/ipcr.js"></script>
-    <script src="../rjs/dependencies.js"></script>
-    <script src="../rjs/navigate.js"></script>
-    <script src="../rjs/animation.js"></script>
-    <script src="../rjs/forms.js"></script>
-    <script src="../rjs/filter.js"></script>
-    <script src="../rjs/settings.js"></script>
-    <script src="../rjs/splash.js"></script>
-    <script src="../rjs/search.js"></script>
+    <div id="main-wrapper"></div>
+    <div id="toggle-prompt"></div>
+    <script src="../rjs/index.js"></script>
 </body>
 </html>
