Made progress with settings and UI.

--- a/GUI/html/index.html
+++ b/GUI/html/index.html
@@ -26,14 +26,14 @@
     <div id="titlebar"></div>
     <div id="sidebar-spacer">&nbsp;</div>
     <div id="sidebar">
+        <div id="settings-wrapper"></div>
         <div id="sidebar-options">
             <div id="upper">
                 <button class="icon view-button" id="show-table-view">filter_list</button>
                 <button class="icon view-button" id="show-edit-view">edit</button>
                 <button class="icon view-button" id="show-build-view">build</button>
             </div>
-            <div id="settings-wrapper"></div>
-            <button class="icon view-button" id="settings">settings</button>
+            <button class="icon view-button settings-button-disabled" id="show-settings-view" disabled>settings</button>
         </div>
     </div>
     <div id="main-wrapper"></div>
