--- a/GUI/html/progress.html
+++ b/GUI/html/progress.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progress</title>
+    <link rel="stylesheet" href="../css/material-font.css">
     <style>
         body,
         html {
@@ -25,22 +26,45 @@
             overflow-y: scroll;
             cursor: pointer;
         }
+
+        #clipboard {
+            background: #0a0a0a;
+            border: none;
+            color: #e8dbae;
+            width: 60px;
+            height: 60px;
+            font-size: 18pt;
+            border-radius: 30px;
+            position: fixed;
+            bottom: 40px;
+            right: 40px;
+            outline: none;
+            cursor: pointer;
+            box-shadow: 0 0 6px 2px #6b6b6bde;
+        }
+
+        #clipboard:active {
+            box-shadow: none;
+            color: #9e967b;
+        }
     </style>
 </head>
 
 <body>
     <div id="data-content-wrapper"></div>
+    <button id="clipboard" class="icon">content_paste</button>
 
     <script>
         const { ipcRenderer } = require('electron');
         const contentWrapper = document.querySelector('#data-content-wrapper');
+        const clipboardButton = document.querySelector('#clipboard');
 
         ipcRenderer.on('progress', (event, data) => {
             contentWrapper.innerText += data;
-            contentWrapper.scrollTo(0, document.body.scrollHeight);
+            contentWrapper.scrollTo(0, contentWrapper.scrollHeight);
         });
 
-        window.addEventListener('click', () => {
+        clipboardButton.addEventListener('click', () => {
             navigator.clipboard.writeText(contentWrapper.innerText);
         }, false)
     </script>
