--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,8 @@
     </div>
     <div id="main-wrapper"></div>
     <div id="toggle-prompt"></div>
-    <script src="../build/rjs/index.js"></script>
+    <script>
+        require('../rjs/index.js');
+    </script>
 </body>
 </html>
